loki/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
        - loki.paffcio.com
        - grafana.paffcio.com
      secretName: letsencrypt-issuer
  rules:
    - host: loki.paffcio.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
    - host: grafana.paffcio.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 80
